# Study.io

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/: main copy.cc  main.cc  main.cpp  main.html  maincopy.cc  maincopy_2.cc  player.cpp
client/src/include/: player.hpp
server/: SocketServer.java
server/src/: main.py
src/: main.cc
web-app/: .gitignore  package-lock.json  package.json
web-app/src/app/: canvas.module.css  globals.css  page.module.css  page.tsx
web-app/src/app/components/: RaylibCanvas.tsx
web-app/src/utils/: loadRaylib.ts
